--- a/intro-css.html
+++ b/intro-css.html
@@ -63,7 +63,7 @@
         <article>
           <div class="container">
             <div class="content">
-              <p>Parrafo</p>
+              <p>Párrafo</p>
               <h3>Este es un detalle</h3>
               <div class="mydiv">
                 <div class="div-in-mydiv"></div>
@@ -72,9 +72,115 @@
               </div>
               <div class="tamano">
                 <div class="tamano-hijo">sss</div>
-                <div class="div-vh-vw">texto</div>
               </div>
+              <div class="div-vh-vw">100vh-100vw</div>
+              <div class="punto">100 pt</div>
+              <div class="div-rem">20 rem</div>
+              <div class="div-em">20 em</div>
+              <div class="_contenedor">
+                contenedor
+                <div class="_contenido">
+                  contenido
+                  <div class="_otrocontenido">otro contenido</div>
+                  <div class="contenido-grande">contenido muy grande</div>
+                </div>
+              </div>
+              <div class="contenedor-de-bordes">
+                <div class="borde-1"></div>
+                <div class="borde-2"></div>
+                <div class="borde-3"></div>
+                <div class="borde-4"></div>
+              </div>
+              <div class="borde-en-una-linea"></div>
             </div>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article class="content-d-flex">
+          <h2>Display Flex</h2>
+          <div class="flex-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <!-- <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div> -->
+          </div>
+          <h2>Contenido y contenedor perfectamente centrados</h2>
+          <div class="contenedor-perfecto">
+            <div class="contenido-perfecto">perfecto</div>
+          </div>
+          <h2>Elementos hijos de flex</h2>
+          <div class="flex-container-2">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+          <h2>Flex-shrink</h2>
+          <div class="flex-container-3">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <h2>Display Grid (Css Layaout)</h2>
+          <h3>template columns</h3>
+          <div class="container-grid grid-columns">
+            <div class="item">1fr</div>
+            <div class="item">1fr</div>
+            <div class="item">1fr</div>
+
+            <div class="item">1fr</div>
+            <div class="item">1fr</div>
+            <div class="item">1fr</div>
+          </div>
+          <h3>template Rows</h3>
+          <div class="container-grid grid-rows">
+            <div class="item">1fr</div>
+            <div class="item">1fr</div>
+            <div class="item">1fr</div>
+          </div>
+          <h3>Template rows and columns</h3>
+          <div class="container-grid grid-rows-columns">
+            <div class="item primero">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+            <div class="item">4</div>
+            <div class="item">5</div>
+            <div class="item">6</div>
+            <div class="item">7</div>
+            <div class="item">8</div>
+            <div class="item">9</div>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div class="container-grid estructura">
+            <div class="_header">HEADER</div>
+            <div class="_sidelbar">SIDELBAR</div>
+            <div class="_main">MAIN</div>
+            <div class="_footer">FOOTER</div>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <h2>Responsividad usando grid</h2>
+          <div class="responsivo">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
           </div>
         </article>
       </section>
